# subtitle-studio

./: package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx  lib.rs  main.rs  main.tsx  types.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  types.rs
src-tauri/src/cache/: mod.rs
src-tauri/src/commands/: ai.rs  audio.rs  files.rs  media.rs  mod.rs  notifications.rs  project.rs  quality.rs  sync.rs
src-tauri/src/project/: glossary.rs  mod.rs  model.rs
src-tauri/src/subtitle_parser/: mod.rs  srt.rs  vtt.rs
src-tauri/src/utils/: network.rs
src/cache/: mod.rs
src/commands/: ai.rs  files.rs  mod.rs  project.rs
src/components/modals/: ActivationModal.tsx  ExportModal.tsx  GlossaryModal.tsx  NewProjectModal.tsx  WelcomeModal.tsx  WizardModal.tsx
src/project/: glossary.rs  mod.rs  model.rs
src/services/: projectService.ts
src/utils/: subtitleSegmentsLocal.ts
subtitle-studio/: package-lock.json
subtitle-studio/src-tauri/migrations/: 20240601_init.sql
subtitle-studio/src-tauri/src/: lib.rs
subtitle-studio/src-tauri/src/commands/: ai.rs  files.rs  mod.rs  project.rs
