[package]
name = "subtitle-studio"
version = "0.1.0"
description = "Desktop subtitle editor with AI integration"
authors = ["You"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
tauri-plugin-sql = { version = "2.3.2", features = ["sqlite"] }
tauri-plugin-fs = "2.3.2"
tauri-plugin-shell = "2.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"] }
sha2 = "0.10"
uuid = { version = "1.7", features = ["v4"] }
chrono = "0.4"
keyring = "2.3"
